fixing diagnostic modal not showing everything
git-svn-id: https://svn.penske.com/svn/ecomm/webprojects/suppliermgmt/suppliermgmt/branches/dev@77419 1dbbddac-570e-0410-aece-e783461d2649

--- a/WebContent/css/admin-console/oem-build-matrix/production-slot-results.css
+++ b/WebContent/css/admin-console/oem-build-matrix/production-slot-results.css
@@ -69,7 +69,6 @@ color: #FFFFFF !important;
 }
 
 #view-diagnostic-info-popup-modal {
-    max-height: 300px !important;
     overflow-y: hidden !important;
 }
 
